Initial working version.

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,7 @@
 ; - halmet
 ; - halser
 
-default_envs = pioarduino_esp32
+default_envs = pioarduino_esp32s3
 
 [env]
 
@@ -140,6 +140,17 @@ build_flags =
     -DARDUINO_USB_MODE=1
     -DARDUINO_USB_CDC_ON_BOOT=1
 
+[esp32s3]
+
+board = esp32-s3-devkitm-1
+build_flags =
+    ${env.build_flags}
+    -D SENSESP_BUTTON_PIN=9
+    -D PIN_RGB_LED=38
+    ; Use the CDC USB port as Serial
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+
 ;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
 ; Permutations of platform and device.
 
@@ -170,6 +181,13 @@ extends = arduino, esp32c3
 build_flags =
     ${arduino.build_flags}
     ${esp32c3.build_flags}
+
+[env:pioarduino_esp32s3]
+
+extends = pioarduino, esp32s3
+build_flags =
+    ${pioarduino.build_flags}
+    ${esp32s3.build_flags}
 
 [env:pioarduino_esp32c3]
 
