--- a/platformio.ini
+++ b/platformio.ini
@@ -37,6 +37,7 @@ build_flags =
     -D CORE_DEBUG_LEVEL=ARDUHAL_LOG_LEVEL_VERBOSE
     ; Use the ESP-IDF logging library - required by SensESP.
     -D USE_ESP_IDF_LOG
+     -Ilib/SensESP/src
 
 ; This line defines the partition table to use. "min_spiffs" has two app
 ; partitions, one for OTA updates and one for the running app, but the
